tests/ui/issues/issue-5062.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-5062.rs:1:29
   |
LL | fn main() { format!("{:?}", None); }
   |                             ^^^^ cannot infer type of the type parameter `T` declared on the enum `Option`
   |
help: consider specifying the generic argument
   |
LL | fn main() { format!("{:?}", None::<T>); }
   |                                 +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
